# talon

./: .gitignore  .mcp.json  2026-04-25-talon-extraction-design.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE-3RD-PARTY.md  README.md  REFACTORING_PLAN.md  justfile  prd.json
crates/talon-cli/: Cargo.toml  build.rs
crates/talon-cli/src/: agent_contract.rs  banner.rs  cli.rs  command.rs  config.rs  exit_codes.rs  lib.rs  main.rs  output.rs  platform.rs  spinner.rs  telemetry.rs
crates/talon-cli/src/cli/: ask_args.rs  changes_args.rs  hook_args.rs  init_args.rs  inspect_args.rs  lint_args.rs  meta_args.rs  mod.rs  read_args.rs  recall_args.rs  related_args.rs  scope.rs  search_args.rs  status_args.rs  sync_args.rs  where_clause.rs
crates/talon-cli/src/command/: ask.rs  ask_client.rs  ask_sources.rs  ask_tests.rs  changes.rs  hook.rs  init.rs  inspect.rs  lint.rs  meta.rs  mod.rs  read.rs  recall.rs  related.rs  search.rs  secrets.rs  status.rs  sync.rs
crates/talon-cli/src/config/: karpathy.rs  refresh.rs  tests.rs
crates/talon-cli/src/mcp/: diagnostics.rs  mod.rs  protocol.rs  state.rs  tool.rs  transport.rs
crates/talon-cli/src/mcp/background/: embed.rs  mod.rs  watcher.rs
crates/talon-cli/src/mcp/session/: chunk_id.rs  fingerprint.rs  ledger.rs  mod.rs  suppression.rs
crates/talon-cli/src/mcp/tool/: dispatch.rs  error.rs  hook.rs  hook_recall.rs  mod.rs  public.rs  schema.rs  status.rs  sync.rs  tests.rs
crates/talon-cli/src/output/: ask.rs  human.rs  json.rs  mod.rs  obsidian.rs  recall.rs  search.rs  style.rs
crates/talon-cli/src/output/json/: agent.rs
crates/talon-cli/tests/: cli.rs  human_output.rs  mcp_stdio.rs  skill_flag.rs
crates/talon-cli/tests/cli/: examples_graph.rs  json_error.rs  json_success.rs  smoke.rs  where_clause.rs
crates/talon-cli/tests/snapshots/: human_output__snapshot_inspect_orphans.snap  human_output__snapshot_lint_orphans.snap  human_output__snapshot_search_empty.snap  human_output__snapshot_search_results.snap  human_output__snapshot_search_verbose_diagnostics.snap  human_output__snapshot_search_verbose_strong_signal.snap  human_output__snapshot_status_ready.snap  human_output__snapshot_sync_fast.snap  human_output__snapshot_sync_with_embed.snap
crates/talon-core/: Cargo.toml
crates/talon-core/benches/: bm25_with_filter.rs
crates/talon-core/src/: change_tracking.rs  chunker.rs  config.rs  constants.rs  error.rs  frontmatter.rs  glob_matcher.rs  lib.rs  links.rs  migrations.rs  numeric.rs  store.rs  text.rs  tool.rs  vec_ext.rs  vec_ext_tests.rs
crates/talon-core/src/ask/: client.rs  error.rs  mod.rs  types.rs
crates/talon-core/src/ask/client/: tests.rs
crates/talon-core/src/cache/: mod.rs  rerank.rs  search.rs
crates/talon-core/src/config/: auth.rs  chunker.rs  defaults.rs  endpoints.rs  keychain.rs  scope_filter.rs  scope_filter_tests.rs  search.rs  test_literals.rs
crates/talon-core/src/contracts/: accessors.rs  envelope_tests.rs  mod.rs
crates/talon-core/src/embed/: diagnostics.rs  mod.rs  pending.rs  persist.rs  quantize.rs  runner.rs
crates/talon-core/src/embed/runner/: tests.rs  wiremock_tests.rs
crates/talon-core/src/expansion/: cache.rs  client.rs  error.rs  mod.rs  types.rs
crates/talon-core/src/expansion/client/: tests.rs
crates/talon-core/src/graph/: build.rs  build_incremental.rs  build_suggestions.rs  build_tests.rs  community.rs  community_tests.rs  health.rs  mod.rs  scoring.rs  scoring_support.rs  scoring_tests.rs  snapshot.rs  storage.rs  suggest.rs  suggest_llm.rs  suggest_llm_tests.rs  suggest_tests.rs
crates/talon-core/src/indexer/: mod.rs  prelude.rs  prelude_tests.rs  scan.rs  scan_tests.rs  upsert.rs  wiring.rs
crates/talon-core/src/indexer/scan/: freshness.rs
crates/talon-core/src/indexing/: change_tracking.rs  input.rs  migrations.rs  mod.rs  output.rs
crates/talon-core/src/indexing/change_tracking/: tests.rs  (+1 more)
crates/talon-core/src/inference/: client.rs  embedding.rs  error.rs  http.rs  mod.rs  rerank.rs  types.rs
crates/talon-core/src/links/: resolver.rs  tests.rs
crates/talon-core/src/llm/: client.rs  error.rs  mod.rs  types.rs
crates/talon-core/src/query/: changes.rs  input.rs  inspect.rs  inspect_tests.rs  lint.rs  meta.rs  mod.rs  mtime.rs  output.rs  read.rs  recall.rs  recall_scoring.rs  related.rs  search.rs  search_affordances.rs  search_affordances_tests.rs  search_filter.rs  search_graph.rs  search_hybrid.rs  search_query_syntax_tests.rs  search_retrieval.rs  search_tests.rs  status.rs  where_filter.rs
crates/talon-core/src/runtime/: clients.rs  mod.rs
crates/talon-core/src/search/: anchor.rs  bm25.rs  cache.rs  chunk_excerpt.rs  constants.rs  fuse.rs  fuzzy_title.rs  hooks.rs  hybrid_pipeline.rs  hybrid_single.rs  input.rs  intent.rs  intent_alignment.rs  match_text.rs  mod.rs  output.rs  pool.rs  pre_filter.rs  query_syntax.rs  rerank_pipeline.rs  rerank_pipeline_intent_tests.rs  rerank_pipeline_tests.rs  rrf.rs  text_fts.rs  types.rs  vector.rs
crates/talon-core/src/sync/: lock.rs  mod.rs  relink.rs  tests.rs
crates/talon-core/src/text/: chunker.rs  frontmatter.rs  mod.rs  nfd.rs  processing.rs  processing_wikilink.rs
crates/talon-core/tests/: eval_suite.rs  fixture_vault.rs  ranking_regression.rs  search_integration.rs  sync_embed.rs
crates/talon-core/tests/eval/: baseline.json  fixture.rs  golden.rs  metrics.rs  mod.rs  responders.rs  tests.rs  vector.rs
crates/talon-core/tests/fixture_vault/: anchors.rs  hybrid.rs  query.rs  recall.rs  search.rs  sync.rs
crates/talon-core/tests/fixtures/: golden-set.json
crates/talon-core/tests/ranking_regression/: default.rs  fast.rs  golden.rs
crates/talon-core/tests/search_integration/: filters.rs  fts_tokenchars.rs  limit_with_filter.rs  modes.rs  search_cache.rs  short_aliases.rs
integrations/hermes-talon-recall/: README.md  plugin.yaml  pyproject.toml
integrations/hermes-talon-recall/hermes-memory/talon-recall/: __init__.py
integrations/hermes-talon-recall/hermes_talon_recall/: __init__.py  provider.py
integrations/hermes-talon-recall/tests/: test_provider.py
(+317 files in other folders)
