[workspace]
members = ["crates/talon-cli", "crates/talon-core"]
resolver = "3"

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/seanmozeik/talon"
homepage = "https://github.com/seanmozeik/talon"
documentation = "https://docs.rs/talon"
readme = "README.md"

[workspace.dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
assert_cmd = "2.0.17"
clap = { version = "4.6", features = ["derive", "color", "error-context"] }
clap_complete = "4.6"
clap_complete_nushell = "4.6"
color-eyre = "0.6.5"
dirs = "6.0.0"
eyre = "0.6.12"
fs-err = "3.3.0"
globset = "0.4.18"
indexmap = { version = "2.13.0", features = ["serde"] }
indicatif = "0.18.4"
insta = "1.43.1"
lru = "0.18.0"
predicates = "3.1.3"
rattles = "0.3.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "blocking",
] }
rusqlite = { version = "0.32.1", features = ["bundled", "load_extension"] }
rustix = { version = "1.1.4", features = ["process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml_ng = "0.10.0"
sha2 = "0.10.9"
sqlite-vec = "0.1.9"
talon-core = { path = "crates/talon-core", version = "0.2.1" }
terminal_size = "0.4.1"
text-splitter = { version = "0.30.1", features = ["markdown"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = [
  "formatting",
  "parsing",
  "macros",
  "serde",
] }
tokenx-rs = "0.1.0"
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-util = { version = "0.7.17", features = ["rt"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
unicode-normalization = "0.1.25"
walkdir = "2.5.0"
windows-sys = "0.61.2"
wiremock = "0.6.5"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
dbg_macro = "deny"
expect_used = "warn"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
print_stdout = "warn"
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }
todo = "warn"
unwrap_used = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false

[profile.dev]
debug = 1

[profile.dev.package."*"]
opt-level = 3
