[package]
name = "talon-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
default-run = "talon"

[[bin]]
name = "talon"
path = "src/main.rs"

[dependencies]
anstream.workspace = true
anstyle.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_complete_nushell.workspace = true
color-eyre.workspace = true
dirs.workspace = true
eyre.workspace = true
fs-err.workspace = true
indicatif.workspace = true
notify-debouncer-mini = "0.7.0"
rattles.workspace = true
serde.workspace = true
serde_json.workspace = true
talon-core.workspace = true
terminal_size.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
windows-sys = { workspace = true, features = ["Win32_System_Console"] }

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
predicates.workspace = true
serde_json.workspace = true

[lints]
workspace = true
