[package]
name = "talon-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
fs-err.workspace = true
glob.workspace = true
indexmap.workspace = true
lru.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
rustix.workspace = true
sqlite-vec.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
sha2.workspace = true
text-splitter.workspace = true
tokenx-rs.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
unicode-normalization.workspace = true
walkdir.workspace = true
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_System_Threading"] }
xxhash-rust.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
tokio = { workspace = true }
wiremock = { workspace = true }

[[bench]]
name = "bm25_with_filter"
harness = false

[lints]
workspace = true
