[package]
name = "talon-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Core retrieval engine for Talon: hybrid search (BM25 + semantic + reranker), indexing, and graph-aware ranking over markdown corpora."
keywords = ["search", "retrieval", "embeddings", "bm25", "obsidian"]
categories = ["text-processing", "database-implementations"]

[dependencies]
fs-err.workspace = true
globset.workspace = true
indexmap.workspace = true
keyring-core.workspace = true
lru.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
rustix.workspace = true
sqlite-vec.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
sha2.workspace = true
text-splitter.workspace = true
tokenx-rs.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
unicode-normalization.workspace = true
walkdir.workspace = true
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_System_Threading"] }
xxhash-rust.workspace = true
yake-rust = "1.0.3"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7.0"

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = "1.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.0.0"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
tokio = { workspace = true }
wiremock = { workspace = true }

[[bench]]
name = "bm25_with_filter"
harness = false

[lints]
workspace = true
