[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-talon-recall"
# Version stays lockstep with talon-cli major.minor (Cargo.toml: version = "0.1.0").
version = "0.2.0"
description = "Hermes Agent Memory Provider: vault-native context recall via talon recall"
license = { text = "MIT" }
authors = [{ name = "seanmozeik", email = "xtremium2002@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=9.0.3"]

[project.urls]
Homepage = "https://github.com/seanmozeik/talon"

[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "plugin.yaml",
  "hermes-memory",
  "hermes_talon_recall",
  "tests",
]

[tool.hatch.build.targets.wheel]
packages = ["hermes_talon_recall"]

[tool.hatch.build.targets.wheel.force-include]
"hermes-memory" = "hermes-memory"

[tool.pytest.ini_options]
testpaths = ["tests"]
